k8s/overlays/dev/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: project-acorn
  namespace: project-acorn
  annotations:
    argocd-image-updater.argoproj.io/git-branch: develop
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: website
          image: ghcr.io/donhamiltoniii/project-acorn:dev-latest
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
  strategy:
    blueGreen:
      autoPromotionEnabled: true
      scaleDownDelaySeconds: 120
